	- Security controls for the SNMP agent added. Besides communities
          (like password) and views (part of tree accessible), the snmp_acl
	  config option can be used to do acl based access checks per
	  community.
	- SNMP agent was heavily re-written, based on cmu-snmpV1.8. 
	  You can now walk through the whole mib tree. Several 
	  new variables added under cacheProtoAggregateStats
	- Added rudimental statistics for HTTP headers.
	- Adjusted StatLogHist to a more "generic"/flexible StatHist.
	  Moved StatHist implementation into a separate file.
	- Added FTP support for PORT if PASV fails, also try the
	  default FTP data port (Henrik Nordstrom).
	- Fixed NULL pointer bug in clientGetHeadersForIMS when a
	  request is cancelled for fails on the client side.
	- Filled in some squid.conf comments (never_direct,
	  always_direct).
	- Added RES_DNSRCH to dnsserver's _res.options when the 
	  -D command line option is given.
	- Fixed repeated Detected DEAD/REVIVED Sibling messages when
	  peer->tcp_up == 0 (Michael O'Reilly).
	- Fixed storeGetNextFile's incorrect "directory does not exist"
	  errors (Michael O'Reilly).
	- Fixed aiops.c race condition (Michael O'Reilly, Stewart
	  Forster).
	- Added 'dns_nameservers' config option to specify non-default
	  DNS nameserver addresses (Maxim Krasnyansky).
	- Added lib/util.c code to show memory map as a tree
	  (Henrik Nordstrom).
	- Added HTTP and ICP median service times to Counters and
	  cachemgr average stats.
	- Changed "-d" command line option to take debugging level
	  as argument.  Debugging equal-to or less-than the argument
	  will be written to stderr.
	- Removed unused urlClean() function from url.c.	
	- Fixed a bug that allow '?' parts of urls to be recorded in
	  store.log.  Logged urls are now "clean".
	- Cache Manager got new Web interface (cachemgr.cgi). New .cgi
	  script forwards basic authentication from browser to squid.
	  Authentication info is encoded within all dynamically generated